--- a/Aboutus.html
+++ b/Aboutus.html
@@ -29,7 +29,7 @@
     <div id="container">
         <h2>About us</h2>
         <aside>
-            <img id="panda" src="/cute.jpg">
+            <img id="panda" src="/.cute.jpg">
             
         </aside>
         <section id="main">
